--- a/src/sys-user/myprofile-page/userProfile.scss
+++ b/src/sys-user/myprofile-page/userProfile.scss
@@ -146,7 +146,7 @@ main {
 
                 .user-post {
                     width: 690px;
-                    margin-bottom: 10px;
+                    margin-top: 10px;
                     background-color: $divider-color;
                     border-radius: 10px;
 
@@ -191,6 +191,21 @@ main {
                     .caption-attachment {
                         margin: 0 40px 15px 40px;
                         font-size: .9rem;
+                    }
+
+                    .shop-response {
+                        background-color: $loginbg-color;
+                        margin: 0 40px 15px 40px;
+                        font-size: .9rem;
+                        
+
+                        h3 {
+                            color: $header-color;
+                        }
+
+                        p {
+                            margin-left: 20px;
+                        }
                     }
 
                     .comment-send {
