--- a/src/style/globals/variables/_font.scss
+++ b/src/style/globals/variables/_font.scss
@@ -1,6 +1,8 @@
 //font used
 $font-family: 'Poppins', sans-serif;
 
+$times: "Times New Roman", Times, serif;
+
 //font sizes
 $divider-size: .5rem;
 $nav-size: 1rem;
