--- a/src/sys-admin/feed-profile-page/adminProfile.css
+++ b/src/sys-admin/feed-profile-page/adminProfile.css
@@ -144,6 +144,16 @@ header nav a:hover {
   border-bottom: 3px solid #ffffff;
   padding-bottom: 5px;
 }
+header nav a span {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  margin-left: -15px;
+  background-color: #ee0000;
+  border-radius: 50%;
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+}
 
 .divider {
   display: flex;
@@ -180,6 +190,26 @@ main .container .message-pop {
 main .container .post-cont {
   width: 740px;
   height: 90vh;
+}
+main .container .post-cont .category button {
+  font-family: "Poppins", sans-serif;
+  border: 2px solid #a8896c;
+  background-color: #ffffff;
+  width: 352px;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+  color: #a8896c;
+  transition: 0.3s;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+main .container .post-cont .category button:hover {
+  color: #ffffff;
+  background-color: #a8896c;
+}
+main .container .post-cont .category .active {
+  color: #ffffff;
+  background-color: #a8896c;
 }
 main .container .post-cont .form-cont {
   display: flex;
