--- a/src/sys-admin/message-page/adminMessage.scss
+++ b/src/sys-admin/message-page/adminMessage.scss
@@ -49,6 +49,33 @@ main {
                         font-size: .8rem;
                     }
                 }
+
+                .refresh-btn {
+                    margin-left: 20px;
+                    @include flexBox();
+                    background-color: $header-color;
+                    padding: 5px 10px;
+                    border-radius: 5px;
+                    transition: 0.3s;
+                    color: $white-color;
+                    cursor: pointer;
+
+                    &:hover {
+                        opacity: 80%;
+                        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                    }
+
+                    a {
+                        text-decoration: none;
+                        color: $white-color;
+                        font-size: .8rem;
+                    }
+
+                    .your_div {
+                        font-family: $times;
+                        font-size: .8rem;
+                    }
+                }
                 
             }
 
@@ -503,7 +530,7 @@ main {
                     margin: auto;
                     margin-top: 20px;
                     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-                
+                    
                     .shopname {
                         width: 400px;
                         text-align: center;
@@ -512,6 +539,7 @@ main {
                             font-size: .6rem;
                         }
                     }
+                    
                     .details {
                         width: 400px;
                         margin-top: 10px;
