--- a/src/sys-user/message-page/userMessage.css
+++ b/src/sys-user/message-page/userMessage.css
@@ -144,6 +144,16 @@ header nav a:hover {
   border-bottom: 3px solid #ffffff;
   padding-bottom: 5px;
 }
+header nav a span {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  margin-left: -15px;
+  background-color: #ee0000;
+  border-radius: 50%;
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+}
 
 .divider {
   display: flex;
@@ -189,15 +199,39 @@ main .container .message-cont .message-head img {
   margin-left: 20px;
   border-radius: 50%;
 }
-main .container .message-cont .message-head a {
+main .container .message-cont .message-head .shop {
   color: #a8896c;
   margin-left: 10px;
   font-size: 1.3rem;
   font-weight: 600;
   text-decoration: none;
 }
-main .container .message-cont .message-head a:hover {
+main .container .message-cont .message-head .shop:hover {
   text-decoration: underline;
+}
+main .container .message-cont .message-head .refresh-btn {
+  margin-left: 340px;
+  display: flex;
+  align-items: center;
+  background-color: #a8896c;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: 0.3s;
+  color: #ffffff;
+  cursor: pointer;
+}
+main .container .message-cont .message-head .refresh-btn:hover {
+  opacity: 80%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+main .container .message-cont .message-head .refresh-btn a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 0.8rem;
+}
+main .container .message-cont .message-head .refresh-btn .your_div {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 0.8rem;
 }
 main .container .message-cont .message-box {
   overflow-y: scroll;
