--- a/src/style/globals/variables/_colors.scss
+++ b/src/style/globals/variables/_colors.scss
@@ -4,7 +4,9 @@ $divider-color: #f2e5db; /*divider color*/
 $loginbg-color: #f5ece3; /*login container color*/
 $white-color: #ffffff; /*white color*/
 $mt-color: #dbb07b; /*mountain background color*/
-$red: #FF0000;
-$green: #00FF00;
+$red: #d9534f;
+$green: #42ba96;
 
 $loginbg-color-op: #f5ece39a;
+
+$black: #000000;
