--- a/src/sys-admin/message-page/adminMessage.css
+++ b/src/sys-admin/message-page/adminMessage.css
@@ -355,6 +355,20 @@ main .container .progress-cont .progress .progress-header h2, main .container .p
   margin: 10px;
   color: #ffffff;
 }
+main .container .progress-cont .progress .progress-header button {
+  padding: 2px 0;
+  width: 100px;
+  margin-right: 10px;
+  background-color: #f2e5db;
+  font-family: "Poppins", sans-serif;
+  border: none;
+  border-radius: 3px;
+  color: #a8896c;
+  cursor: pointer;
+}
+main .container .progress-cont .progress .progress-header button:hover {
+  opacity: 80%;
+}
 main .container .progress-cont .progress .progress-bar-cont {
   width: 380px;
   height: 73vh;
@@ -412,6 +426,28 @@ main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .
   display: flex;
   align-items: center;
 }
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s button, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t button {
+  width: 100%;
+  padding: 2px;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+  border-radius: 3px;
+  transition: 0.3s;
+  cursor: pointer;
+  margin-top: 10px;
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s button:hover, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t button:hover {
+  opacity: 80%;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s .cancel, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t .cancel {
+  background-color: #d9534f;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s .view, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t .view {
+  background-color: #a8896c;
+}
 main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s p, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t p {
   font-size: 0.8rem;
 }
@@ -461,7 +497,7 @@ main .container .progress-cont .progress .progress-bar-cont .canvas .progress-ti
 }
 main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage .prog-status p {
   margin-left: 5px;
-  color: #FF0000;
+  color: #d9534f;
 }
 main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage .percent {
   width: 60px;
@@ -634,7 +670,7 @@ main .container .sml-cont .content-cont .progress-parent .prog-child .progress-t
 }
 main .container .sml-cont .content-cont .progress-parent .prog-child .progress-timeline .percentage .prog-status p {
   margin-left: 5px;
-  color: #FF0000;
+  color: #d9534f;
 }
 main .container .sml-cont .content-cont .progress-parent .prog-child .progress-timeline .percentage .percent {
   width: 60px;
