--- a/src/sys-user/customization-page/userCustomization.css
+++ b/src/sys-user/customization-page/userCustomization.css
@@ -237,4 +237,112 @@ main .container .custo-cont .choices .choice-child h1 {
 }
 main .container .custo-cont .form {
   height: 80vh;
+}
+main .container .custo-cont .customized-list {
+  overflow-y: scroll;
+  width: 800px;
+  height: 80vh;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+}
+main .container .custo-cont .customized-list::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .custo-cont .customized-list::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .custo-cont .customized-list::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .custo-cont .customized-list::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .custo-cont .customized-list::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
+}
+main .container .custo-cont .customized-list table {
+  width: 100%;
+}
+main .container .custo-cont .customized-list table tr, main .container .custo-cont .customized-list table th, main .container .custo-cont .customized-list table td {
+  text-align: center;
+  border-bottom: 1px solid #808080;
+  padding: 3px 0;
+}
+main .container .custo-cont .customized-list table th {
+  font-size: 0.9rem;
+}
+main .container .custo-cont .customized-list table tr:hover {
+  background-color: rgba(226, 226, 226, 0.5960784314);
+}
+main .container .custo-cont .customized-list table td {
+  font-size: 0.8rem;
+}
+main .container .custo-cont .customized-list table td button, main .container .custo-cont .customized-list table td a {
+  width: 60px;
+  padding: 2px;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+  border-radius: 3px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+main .container .custo-cont .customized-list table td button:hover, main .container .custo-cont .customized-list table td a:hover {
+  opacity: 80%;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+main .container .custo-cont .customized-list table td a {
+  display: flex;
+}
+main .container .custo-cont .customized-list table td .view {
+  background-color: #a8896c;
+}
+main .container .custo-cont .customized-list table td .delete {
+  background-color: #d9534f;
+}
+main .container .custo-cont .customized-list table td .success {
+  background-color: #42ba96;
+  padding: 3px 22px;
+}
+
+.image-cont {
+  color: #ffffff;
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.image-cont button {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 10px;
+  left: 10px;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+.image-cont button:hover {
+  opacity: 70%;
+}
+.image-cont .front, .image-cont .back {
+  height: 90vh;
+  width: 40%;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image-cont .front img, .image-cont .back img {
+  height: 100%;
 }/*# sourceMappingURL=userCustomization.css.map */
