--- a/src/sys-user/customization-page/userCustomization.scss
+++ b/src/sys-user/customization-page/userCustomization.scss
@@ -131,7 +131,8 @@ main {
 
                         .success {
                             background-color: $green;
-                            padding: 3px 22px;
+                            padding: 4px 22px;
+                            margin: auto;
                         }
                     }
                 }
